--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -48,3 +48,25 @@ div.video-player{
     height:100%;
     width:100%;
 }
+/*-----------------------------------ROOM STYLING/CONTROLS------------------------------------------*/
+
+#control-wrapper{
+    display: flex;
+    width: 100%;
+    justify-content: center;
+    column-gap: 1em;
+    position: fixed;
+    bottom: 20px;
+}
+.control-icon{
+    height:20px;
+    width:20px;
+    box-shadow: var(--shadow);
+    background-color: white;
+    cursor: pointer;
+    padding:10px;
+    border-radius: 5px;
+}
+#leave-btn{
+    background-color: rgb(255,80,80,1);
+}
