--- a/static/styles/main.css
+++ b/static/styles/main.css
@@ -1,9 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500&display=swap');
 :root{
    
     --shadow:0 4px 6px -1px rgba(0,0,0,0.1),0 2px 4px -1px rgba(0,0,0,0.06);
 }
 body{
     background-color: rgba(232,233,239,1);
+    font-family: 'Roboto', sans-serif;
 }
 #logo{
     display: block;
@@ -24,8 +26,61 @@ h1,p{
     left:50%;
     transform: translate(-50%,-50%);
 }
+#welcome-message{
+    text-align: center;
+    margin-bottom: 20px;
+}
+#welcome-message h1{
+    font-size: 36px;
+}
+#welcome-message p{
+    font-size: 16px;
+}
+.form-field{
+    margin:20px;
+
+}
+.form-field label{
+    font-size: 16px;
+    line-height:1.7em;
+}
+.form-field input{
+    width:100%;
+    border:2px solid rgba(198,202,219,1);
+    border-radius: 5px;
+    padding:10px;
+    box-sizing: border-box;
+}
+.form-field input[type='submit']{
+    background-color: rgba(75,93,172,1);
+    border:none;
+    color:white;
+
+}
+@media screen and (max-width:450px)
+{
+    #form-container{
+        width:95%;
+    }
+    #welcome-message h1{
+        font-size: 24px;
+    }
+}
+@media screen and (max-width:1650px)
+{
+    .video-container{
+        flex-basis:300px;
+        min-height:200px;
+        
+    }
+}
 /*-------------------------------------ROOM STYLING-----------------------------------*/
 
+
+#room-name-wrapper{
+    text-align:center;
+    font-size: 18px;
+}
 #video-streams{
     display:flex;
     flex-wrap: wrap;
@@ -42,11 +97,28 @@ h1,p{
     border-radius:5px ;
     margin:2px;
     background-color: rgba(198,202,219,1);
+    position: relative;
 }
 
 div.video-player{
     height:100%;
     width:100%;
+}
+
+.video-player>*{
+    border-radius: 5px;
+
+}
+.username-wrapper{
+    position:absolute;
+    top:10px;
+    left:10px;
+    z-index:9999;
+    background-color: rgba(0,0,0,0.3);
+    padding:10px;
+    border-radius: 5px;
+    font-size: 14px;
+    color:white;
 }
 /*-----------------------------------ROOM STYLING/CONTROLS------------------------------------------*/
 
